--- a/src/Intro.css
+++ b/src/Intro.css
@@ -2,23 +2,23 @@
     display: flex;
     flex-direction: row;
     margin: 150px 10%;
+    padding: 20px 0px;
 }
 
 .text_part {
-    width: 60%;
+    width: 65%;
+    margin-top: 40px;
 }
 
 .image_part {
     width: 320px;
     height: 380px;
-    padding-right: 70px;
-    margin-right: 70px;
-    background-color: black;
+    padding-left: 20px;
+    margin-right: 80px;
 }
 
 .intro_text {
     color: white;
-    text-align: center;
-    margin-left: 80px;
-    padding-top: 60px;
+    text-align: left;
+    padding-left: 80px;
 }
